--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+TELNYX_API_KEY=
+TELNYX_FROM_NUMBER=
+TELNYX_ALPHA_SENDER=ASYLON
+TELNYX_ENABLE_ALPHA=false
+SMS_ENABLED=true
