--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,7 @@ VITE_APP_NAME="${APP_NAME}"
 
 TELNYX_API_KEY=
 TELNYX_FROM_NUMBER=
+TELNYX_MESSAGING_PROFILE_ID=
 TELNYX_ALPHA_SENDER=ASYLON
 TELNYX_ENABLE_ALPHA=false
 SMS_ENABLED=true
