--- a/.env.example
+++ b/.env.example
@@ -69,4 +69,5 @@ TELNYX_FROM_NUMBER=
 TELNYX_MESSAGING_PROFILE_ID=
 TELNYX_ALPHA_SENDER=ASYLON
 TELNYX_ENABLE_ALPHA=false
+TELNYX_SKIP_SSL_VERIFY=true
 SMS_ENABLED=true
