--- a/.env.example
+++ b/.env.example
@@ -71,3 +71,6 @@ TELNYX_ALPHA_SENDER=ASYLON
 TELNYX_ENABLE_ALPHA=false
 TELNYX_SKIP_SSL_VERIFY=true
 SMS_ENABLED=true
+
+ASYLON_SUPPORT_EMAIL=support@asylon.cc
+ASYLON_INFO_EMAIL=info@asylon.cc
