--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,7 @@ SMS_ENABLED=true
 ASYLON_SUPPORT_EMAIL=support@asylon.cc
 ASYLON_INFO_EMAIL=info@asylon.cc
 ASYLON_ULTRA_PRIVATE_MODE=false
+
+# Audio transcription (Python-based)
+TRANSCRIBE_PYTHON_PATH=/usr/bin/python3
+TRANSCRIBE_SCRIPT_PATH=/var/www/scripts/transcribe_server.py
