--- a/.env.example
+++ b/.env.example
@@ -71,10 +71,13 @@ TELNYX_ALPHA_SENDER=ASYLON
 TELNYX_ENABLE_ALPHA=false
 TELNYX_SKIP_SSL_VERIFY=true
 SMS_ENABLED=true
+STRIPE_SECRET=
+STRIPE_PUBLIC_KEY=
 
 ASYLON_SUPPORT_EMAIL=support@asylon.cc
 ASYLON_INFO_EMAIL=info@asylon.cc
 ASYLON_ULTRA_PRIVATE_MODE=false
+ASYLON_EARLY_ADOPTER=true
 
 # Audio transcription (Python-based)
 TRANSCRIBE_PYTHON_PATH=/usr/bin/python3
