--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "stripe/stripe-php": "^19.0",
         "twilio/sdk": "^8.8"
     },
     "require-dev": {
